# jetbot_od

./: .gitignore  CMakeLists.txt  README.md  package.xml  plugins.xml
cfg/: Threshold.cfg  YOLO.cfg
include/jetbot_od/: nodelet.h
launch/: threshold.launch  yolo.launch
object_detection/yolo/: yolov3.cfg
src/nodelet/: nodelet.cpp  threshold_nodelet.cpp  yolo_nodelet.cpp
