<?xml version="1.0"?>
<package format="2">
  <name>jetbot_od</name>
  <version>0.0.0</version>
  <description>Jetbot Object Detection Package</description>

  <maintainer email="issaiass@hotmail.com">Rangel Alvarado</maintainer>

  <license>CCSA2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>


  <export>
    <nodelet plugin="${prefix}/plugins.xml"/>
  </export>
</package>
